k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  labels:
    app: kanban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban
  template:
    metadata:
      labels:
        app: kanban
    spec:
      containers:
        - name: kanban
          image: hanadisa/my-kanban-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
spec:
  selector:
    app: kanban
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
